--- a/src/sass/layouts/_main.scss
+++ b/src/sass/layouts/_main.scss
@@ -5,7 +5,11 @@
 
 .layout {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
-  overflow: hidden;
+
+  &.is-loading {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
